--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,5 +4,7 @@
     </div>
 </div>
 <div class="row">
-    We'll render several ProductItem components here
+    <div *ngFor="let product of products$ | async" class="col-sm-4 col-lg-4 col-md-4">
+        <app-product-item [product]="product"></app-product-item>
+    </div>
 </div>
