--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,9 +3,7 @@
     <footer>
         <div class="row">
             <div class="col-lg-12">
-                All values in class selectors come from the Bootstrap framework.
-                2.7.7
-                <p>Copyright &copy; ngAuction 2018</p>
+                <p>Copyright &copy; ngAuction {{currentDate | date : 'YYYY'}}</p>
             </div>
         </div>
     </footer>
