--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
     </div>
 </div>
 <div class="row">
-    <div *ngFor="let product of products$ | async" class="col-sm-4 col-lg-4 col-md-4">
+    <div *ngFor="let product of products$ | async; trackBy: trackByIndex" class="col-sm-4 col-lg-4 col-md-4">
         <app-product-item [product]="product"></app-product-item>
     </div>
 </div>
